<resources>
    <string name="app_name">Time IQ</string>
    <string name="action_settings">Settings</string>
    <string name="reminders_tab_title">Reminders</string>
    <string name="upcoming_events_tab_title">Upcoming Events</string>
    <string name="places_tab_title">Places</string>
    <string name="bodyiq_tab_title">Daily activity</string>
    <string name="reminder_title_new">NEW REMINDER</string>
    <string name="reminder_title_edit">EDIT REMINDER</string>
    <string name="nothing_to_display_reminder">Click + to add a reminder</string>
    <string name="nothing_to_display_events">Free for the next few hours</string>
    <string name="nothing_to_display_events_no_readable_calendars">There are no viewable calendars set, please set at least one from the application menu</string>
    <string name="title_activity_activity_edit_places">ActivityAddOrEditPlace</string>
    <string name="hint_do">What do you need to do?</string>
    <string name="hint_call">Who do you need to call?</string>
    <string name="hint_notify">Who do you need to notify?</string>
    <string name="tab_title_do">Do</string>
    <string name="tab_title_call">Call</string>
    <string name="tab_title_notify">Notify</string>
    <string name="tab_title_be">Be</string>
    <string name="reminder_type_leave">When you leave&#8230;</string>
    <string name="reminder_type_leave_from">When you leave %1$s</string>
    <string name="reminder_type_arrive">When you arrive&#8230;</string>
    <string name="reminder_type_arrive_to">When you arrive to %1$s</string>
    <string name="reminder_type_next_drive">On your next drive</string>
    <string name="reminder_type_battery">When battery power is over %1$s</string>
    <string name="reminder_type_time">On specific time</string>
    <string name="notification_reminder_sms_title">SMS</string>
    <string name="notification_reminder_sms_default_text_for_arrive">Hi, I just arrived %1$s. %2$s.</string>
    <string name="notification_reminder_sms_default_text_for_leave">Hi, I just left %1$s. %2$s.</string>
    <string name="work">Work</string>
    <string name="home">Home</string>
    <string name="reminder_was_added">Reminder was added</string>
    <string name="reminder_was_not_added">error adding reminder: </string>
    <string name="could_not_create_reminder">Could not create reminder (%1$s)</string>
    <string name="reminder_was_edited">Reminder was edited</string>
    <string name="reminder_was_not_edited">Reminder was not edited</string>
    <string name="reminder_was_not_edited_data_lost">Reminder was not edited, data was lost</string>
    <string name="reminder_was_deleted">Reminder was deleted</string>
    <string name="reminder_was_not_deleted">Reminder was not deleted (%1$s)</string>
    <string name="reminder_wrong_id">failed to get reminder (wrong ID)</string>
    <string name="reminder_do">do: %1$s</string>
    <string name="reminder_notification">%1$s was notified</string>
    <string name="reminder_call_text">Call %1$s</string>
    <string name="reminder_notify_text">Notify %1$s</string>
    <string name="reminder_do_text">%1$s</string>
    <string name="reminder_action_call">%1$s %2$s</string>
    <string name="reminder_action_notify">%1$s %2$s</string>
    <string name="reminder_subtext_arrived">You arrived %1$s</string>
    <string name="reminder_subtext_left">You left %1$s</string>
    <string name="reminder_subtext_driving">You have started to drive</string>
    <string name="reminder_subtext_battery_above">Your battery level is above 15%</string>
    <string name="reminder_subtext_time">It\'s %1$s</string>
    <string name="notification_action_1_reminder_do_name">Done</string>
    <string name="notification_action_1_reminder_call_name">Call now</string>
    <string name="notification_action_1_reminder_notify_name">Open feed</string>
    <string name="notification_action_1_event_name">Navigate</string>
    <string name="notification_action_2_snooze_name">Snooze</string>
    <string name="notification_action_2_snooze_event_name">In 5 min</string>
    <string name="notification_error_intent_is_null">Intent is null</string>
    <string name="notification_error_action_is_null">Action is null</string>
    <string name="notification_error_unknown_action">Unknown action</string>
    <string name="notification_error_notification_id_is_null">Notification ID is null</string>
    <string name="end_reminder_success">Ended reminder (%1$s)</string>
    <string name="end_reminder_failed">Failed to end reminder (%1$s)</string>
    <string name="failed_to_get_reminder">Failed to get reminder (wrong ID? %1$s)</string>
    <string name="failed_to_get_reminder_wrong_id">Failed to get reminder (%1$s)</string>
    <string name="failed_to_get_event">Failed to get event (%1$s)</string>
    <string name="event_dismissed">Event dismissed</string>
    <string name="event_snoozed">Event snoozed</string>
    <string name="event_marked_as">Event marked as (%1$s)</string>
    <string name="failed_to_choose_event_user_action">Failed to choose event user action (%1$s)</string>
    <string name="failed_to_snooze_event">Failed to snooze the event</string>
    <string name="snooze_option_title">Snooze options</string>
    <string name="snooze_option_when_charging">When charging</string>
    <string name="snooze_option_from_the_car">From the car</string>
    <string name="snooze_option_next_drive">Next drive</string>
    <string name="snooze_option_from_place">From %1$s</string>
    <string name="snooze_option_define_home">Define home</string>
    <string name="snooze_option_define_work">Define work</string>
    <string name="snooze_option_next_time_at_current_place">Next time %1$s</string>
    <string name="snooze_option_leave_current_place">When I leave %1$s</string>
    <string name="snooze_option_in_x_min">In %1$d minutes</string>
    <string name="snooze_option_time_range_this_morning">In the morning</string>
    <string name="snooze_option_time_range_later_today">Later today</string>
    <string name="snooze_option_time_range_in_the_evening">In the evening</string>
    <string name="snooze_option_time_range_later_tonight">Later tonight</string>
    <string name="snooze_option_time_range_tomorrow_morning">Tomorrow morning</string>
    <string name="snooze_option_error_reminder_id_null">Reminder ID was null</string>
    <string name="snooze_option_error_no_snooze_options_to_choose_from">No snooze options to choose from</string>
    <string name="snooze_option_error_place_is_null">Reminder ID was null</string>
    <string name="snooze_option_snoozed">Reminder snoozed</string>
    <string name="na">N/A</string>
    <string name="delete_button">Delete</string>
    <string name="reminder_time_at">%1$s</string>
    <string name="reminder_edit_select_time">Select Time</string>
    <string name="reminder_edit_select_date">Select Date</string>
    <string name="be_at_time">At %1$s</string>
    <string name="be_at_place">Be at %1$s</string>
    <string name="be_description">** Generated by Time IQ – do not edit or delete **</string>
    <string name="where_be_at_location">%1$s</string>
    <string name="be_event_no_writable_calendar">You must insert the main calendar from the application menu</string>
    <string name="be_event_was_added">Be event was added</string>
    <string name="be_event_was_not_added">Be event was NOT added</string>
    <string name="reminder_error_nothing_selected">Missing reminder data</string>
    <string name="reminder_error_missing_data">Missing Trigger or reminder data</string>
    <string name="reminder_error_missing_arrive_place">Missing Arrive Place</string>
    <string name="reminder_error_missing_leave_place">Missing Leave Place</string>
    <string name="reminder_error_missing_reminder_time">Missing Reminder Time</string>
    <string name="reminder_error_missing_target_location">Missing Target Location</string>
    <string name="reminder_error_missing_event_time">Missing Event Time</string>
    <string name="reminder_error_missing_target_contact">Missing Target Contact</string>
    <string name="reminder_error_missing_do_action">Missing Do Action</string>
    <string name="be_where_do_you_need_to_be">Where do you need to be?</string>
    <string name="be_when_do_you_need_to_be_there">When do you need to be there?</string>
    <string name="be_in_conflict_with">In conflict with</string>
    <string name="be_no_conflict_with_no_readable_calendars">There are no viewable calendars set, please set at least one from the application menu to see conflicts</string>
    <string name="be_add_to_calendar">Add to calendar?</string>
    <string name="be_edit_title">EDIT BE EVENT</string>
    <string name="be_default_error">Nothing to save</string>
    <string name="be_failed_to_get_input">Failed to get input</string>
    <string name="be_failed_to_get_event_id">Failed to get event ID</string>
    <string name="be_wrong_id">Failed to get event (wrong ID)</string>
    <string name="be_not_be_event">The event is not of BeEvent type</string>
    <string name="be_delete_all_recurrences_message">Delete all recurrences</string>
    <string name="be_delete_successful">Event was deleted</string>
    <string name="be_edit_successful">Event was edited and saved</string>
    <string name="be_add_to_calendar_state">The add to calendar state cannot be edited</string>
    <string name="places_title_edit">EDIT PLACE</string>
    <string name="places_title_add">ADD PLACE</string>
    <string name="places_name_hint">Place name</string>
    <string name="places_address_hint">Place address</string>
    <string name="places_nothing_to_display">There are no places to choose from</string>
    <string name="user_id">Password:</string>
    <string name="username_title">Email:</string>
    <string name="user_id_submit">Sign In</string>
    <string name="sign_up_link"><![CDATA[<a href="https://tsodev-login.td.wearables.infra-host.com/accounts/new?client_id=ndgThunderDome">Sign up</a>]]></string>
    <string name="action_about">About</string>
    <string name="readable_calendars_menu">Set viewable calendars</string>
    <string name="writable_calendars_menu">Set main calendar</string>
    <string name="readable_calendars_title">Viewable calendars</string>
    <string name="readable_calendars_text_with_calendar_name">%1$s\n(%2$s)</string>
    <string name="readable_calendars_text_without_calendar_name">%1$s</string>
    <string name="writable_calendars_title">Main calendar</string>
    <string name="error_writable_calendars_exactly_one_text">There must be exactly one main calendar</string>
    <string name="error_readable_calendars_none_selected_text">There must be at least one viewable calendar selected</string>
    <string name="error_no_calendars_to_choose_from">No calendar to choose from</string>
    <string name="action_developer">Developer</string>
    <string name="google_api_client_error_general">An error occurred, please make sure that you have the Play Store installed and that you are connected to the internet</string>
    <string name="google_api_client_error_cannot_connect">Could not connect to GoogleApiClient (%1$s)</string>
    <string name="save_dialog_progress_dialog_title">Fetching data</string>
    <string name="save_dialog_progress_dialog_body">Getting all location details</string>
    <string name="toast_location_saved">Location saved</string>
    <string name="toast_location_saved_but_old_not_removed">Place saved, but could not remove the old place</string>
    <string name="toast_no_valid_name">Please enter a name</string>
    <string name="toast_no_valid_address">Please enter a valid address</string>
    <string name="toast_unknown_error">unknown error</string>
    <string name="toast_no_resolved_location">No valid location selected</string>
    <string name="toast_no_valid_coordinate">No valid place coordinate</string>
    <string name="toast_could_not_add_place">Could not add place (%1$s)</string>
</resources>