<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    >

    <TextView
        android:id="@+id/be_where"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/be_where_do_you_need_to_be"
        android:gravity="center_vertical|center_horizontal"
        android:paddingTop="24dp"
        android:paddingBottom="12dp"
        />

    <LinearLayout
        android:id="@+id/buffer1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal"
        >
    </LinearLayout>

    <TextView
        android:id="@+id/be_when"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/be_when_do_you_need_to_be_there"
        android:gravity="center_vertical|center_horizontal"
        android:paddingTop="24dp"
        android:paddingBottom="12dp"
        />

    <LinearLayout
        android:id="@+id/buffer2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal"
        >
    </LinearLayout>

    <TextView
        android:id="@+id/nothing_to_display_be"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/be_no_conflict_with_no_readable_calendars"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/be_conflict_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/be_in_conflict_with"
            />

        <ListView
            android:id="@+id/be_conflicts_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
        </ListView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >

        <TextView
            android:text="@string/be_add_to_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            />

        <Switch
            android:id="@+id/be_add_to_calendar_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:checked="false"
            />

    </RelativeLayout>

</LinearLayout>